--- a/hackathon-hora-do-pesadelo/package.json
+++ b/hackathon-hora-do-pesadelo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
+    "lucide-react": "^0.287.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
